frontend/test/should_fail/computations_return_termination_004.grg
var ::glob:int;

procedure one() : (int)
{
	def var x:int = 42;
	return(x);
}

procedure onetwo() : (int, int)
{
	if(::glob==42) {
		return(1,2);
	} else {
	}
}
